--- a/src/scss/sections/fund.scss
+++ b/src/scss/sections/fund.scss
@@ -2,7 +2,7 @@
   padding-top: 133px;
   padding-bottom: 85px;
   background-color: #000;
-  @media (max-width: 1920px) {
+  @media (max-width: 1720px) {
     padding-top: 73px;
     padding-bottom: 15px;
   }
@@ -17,6 +17,9 @@
   max-width: 1640px;
   margin-bottom: 140px;
   @media (max-width: 1920px) {
+    max-width: 1300px;
+  }
+  @media (max-width: 1720px) {
     max-width: 940px;
     margin-bottom: 72px;
   }
@@ -33,7 +36,7 @@
   position: relative;
   z-index: 2;
   margin-bottom: 110px;
-  @media (max-width: 1920px) {
+  @media (max-width: 1720px) {
     margin-bottom: 56px;
   }
   @media (max-width: 992px) {
@@ -105,12 +108,13 @@
   width: 100%;
   max-width: 887px;
   height: 100%;
-  aspect-ratio: 1;
+  min-height: 400px;
   margin-right: auto;
   margin-left: auto;
   transform: translateX(50px);
-  @media (max-width: 1920px) {
+  @media (max-width: 1720px) {
     max-width: 505px;
+    min-height: 200px;
     transform: translateX(30px);
   }
   @media (max-width: 992px) {
@@ -134,6 +138,10 @@
   justify-content: space-between;
   margin-top: -710px;
   @media (max-width: 1920px) {
+    grid-template-columns: repeat(2, 368px);
+    margin-top: -600px;
+  }
+  @media (max-width: 1720px) {
     grid-template-columns: repeat(2, 268px);
     row-gap: 50px;
     margin-top: -400px;
@@ -144,9 +152,12 @@
     margin-top: -220px;
   }
   @media (max-width: 576px) {
-    grid-template-columns: repeat(1, 148px);
+    grid-template-columns: repeat(1, 248px);
     justify-content: center;
     margin-top: unset;
+  }
+  @media (max-width: 375px) {
+    grid-template-columns: repeat(1, 148px);
   }
 }
 
@@ -156,7 +167,7 @@
   background-repeat: no-repeat;
   background-position: top right;
   background-size: contain;
-  @media (max-width: 1920px) {
+  @media (max-width: 1720px) {
     padding-top: 17px;
   }
   @media (max-width: 992px) {
@@ -181,6 +192,12 @@
   @media (max-width: 992px) {
     font-size: 22px;
   }
+  @media (max-width: 576px) {
+    font-size: 30px;
+  }
+  @media (max-width: 375px) {
+    font-size: 22px;
+  }
 }
 .fund-card__pic {
   display: block;
@@ -190,6 +207,12 @@
     height: 84px;
   }
   @media (max-width: 992px) {
+    height: 44px;
+  }
+  @media (max-width: 576px) {
+    height: 84px;
+  }
+  @media (max-width: 375px) {
     height: 44px;
   }
 }
@@ -205,7 +228,7 @@
 }
 .stream__title {
   margin-bottom: 70px;
-  @media (max-width: 1920px) {
+  @media (max-width: 1720px) {
     margin-bottom: 30px;
   }
   @media (max-width: 992px) {
