--- a/src/scss/sections/hero.scss
+++ b/src/scss/sections/hero.scss
@@ -1,5 +1,5 @@
 .hero {
-  padding-top: 250px;
+  padding-top: 300px;
   background-color: #c93515;
   background-image: url("../img/hero/hero-bg.jpg");
   background-repeat: no-repeat;
@@ -7,6 +7,9 @@
   background-size: cover;
   @media (max-width: 1920px) {
     padding-top: 140px;
+  }
+  @media (max-width: 1720px) {
+    padding-top: 190px;
   }
   @media (max-width: 992px) {
     padding-top: 70px;
