--- a/src/scss/sections/hero.scss
+++ b/src/scss/sections/hero.scss
@@ -45,8 +45,8 @@
   position: relative;
   max-width: 995px;
   @media (max-width: 1920px) {
-    max-width: 750px;
-    height: 870px;
+    max-width: 830px;
+    height: 980px;
   }
   @media (max-width: 1720px) {
     max-width: 589px;
@@ -239,11 +239,13 @@
   width: 100%;
   max-width: 727px;
   padding-top: 130px;
+  padding-right: 15px;
   padding-bottom: 48px;
   margin-left: auto;
   @media (max-width: 1720px) {
     max-width: 486px;
     padding-top: 70px;
+    padding-right: 0px;
     padding-bottom: 28px;
   }
   @media (max-width: 1200px) {
@@ -260,9 +262,9 @@
   }
   @media (max-width: 576px) {
     max-width: 280px;
-    padding-top: 30px;
+    padding-top: 10px;
     padding-right: 0;
-    padding-bottom: 3px;
+    padding-bottom: 30px;
     margin-right: auto;
     margin-left: auto;
   }
@@ -366,6 +368,8 @@
   display: flex;
   align-items: center;
   justify-content: flex-end;
+  padding-right: 20px;
+  padding-left: 20px;
   @media (max-width: 576px) {
     justify-content: center;
   }
